k8s/ingress/ingress.yaml
# ingress.yaml
# AWS ALB Ingress — creates an Application Load Balancer
# Routes external traffic to frontend service
# ALB Controller must be installed on EKS
# (you already did this in your observability project)

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce-dev
  annotations:
    kubernetes.io/ingress.class:               alb
    alb.ingress.kubernetes.io/scheme:          internet-facing
    alb.ingress.kubernetes.io/target-type:     ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
